*updates passwordInput doc

--- a/website/docs/components/passwordInput.mdx
+++ b/website/docs/components/passwordInput.mdx
@@ -13,9 +13,14 @@ tags: [components, input]
     {name: 'label', value: 'string', required: true, definition: 'Label for the input'},
     {name: 'value', value: 'string', required: true, definition: 'Current value'},
     {name: 'valueChanged', value: '(value: string) => void', required: true, definition: 'Function to get the entered value'},
+    {name: 'rules', value: '[]PasswordRule', required: true, definition: 'Rules that the password must comply to'},
+    {name: 'ruleChecked', value: '.svg file', required: true, definition: 'Display an icon for a checked rule'},
+    {name: 'ruleUnchecked', value: '.svg file', required: true, definition: 'Display an icon for an unchecked rule'},
+    {name: 'capsLockWarning', value: 'string', required: false, definition: 'Display a warning if users enable capslock'},
     {name: 'iconSrc', value: '.svg file', required: false, definition: 'Display an icon for the input'},
     {name: 'iconColor', value: 'string', required: false, definition: 'Set the color of the icon'},
     {name: 'inputColor', value: 'string', required: false, definition: 'Set the color of the entered text'},
+    {name: 'setFailedRules', value: '(value: PasswordRule[]) => void', required: false, definition: 'Function to retrieve failed rules. Use this if you would like to show an error message based on which rule failed'},
     {name: 'toggle', value: '() => void', required: false, definition: 'Function that runs when clicking on the icon, e.g. toggling between input type password & text'},
     {name: 'tooltipIcon', value: '.svg file', required: false, definition: 'Display a tooltip icon'},
     {name: 'tooltipText', value: 'string', required: false, definition: 'Tooltip text'},
@@ -24,11 +29,164 @@ tags: [components, input]
   ]}
 />
 
-capsLockWarning: string;
-setFailedRules : (value: PasswordRule[]) => void;
-ruleChecked    : string;
-rules          : PasswordRule[];
-ruleUnchecked  : string;
+:::warning[Using icons]
+Provided icons must be in svg format. Can be single svg (foo.svg) or sprites file (foo.svg#bar)
+:::
 
+## PasswordRule
+<AssignableProps
+  data={[
+    {name: 'label', value: 'string', required: true, definition: 'Describe the rule to the user'},
+    {name: 'count', value: 'number', required: false, definition: '# of characters required to comply to the rule'},
+    {name: 'type', value: 'PasswordRuleType enum', required: false, definition: 'Use a predefined pattern'},
+    {name: 'pattern', value: 'regex string', required: false, definition: 'Use a custom pattern'},
+  ]}
+/>
 
+:::note
+If you want to use a predefined pattern you have to set the count property as well.
+:::
+
+## Example usage
+
+:::info
+If you need an input without rule verification, consider using the [CustomInput](./input) component instead.
+:::
+
+### Password rules
+```tsx title='Using a predefined pattern'
+const rules: PasswordRule[] = [
+  {
+    label: 'password must be at least 3 characters long',
+    count: 3,
+    type: PasswordRuleTypes.minLength
+  },
+  ...
+];
+```
+
+```tsx title='Using a custom pattern'
+const rules: PasswordRule[] = [
+  {
+    label: 'password must contain at least 2 numbers',
+    pattern: '[0-9]{2,}'
+  },
+  ...
+];
+```
+
+### Basic usage
 <PasswordExample/>
+
+&NewLine;
+
+```tsx
+<PasswordInput
+  label={'New password'}
+  type={'password'}
+  value={password}
+  valueChanged={setPassword}
+  rules={rules}
+  ruleChecked={'/path/to/file.svg'}
+  ruleUnchecked={'/path/to/file.svg'}
+  name={'password'}
+/>
+```
+
+### Toggle password visibility
+<PasswordToggle/>
+
+&NewLine;
+
+```tsx
+<PasswordInput
+  label={'New password'}
+  type={passVis? 'text' : 'password'}
+  toggle={() => {setPassVis(!passVis)}}
+  value={password}
+  valueChanged={setPassword}
+  rules={rules}
+  ruleChecked={'/path/to/file.svg'}
+  ruleUnchecked={'/path/to/file.svg'}
+  iconSrc={'/path/to/file.svg'}
+  name={'password-toggle'}
+/>
+```
+
+### Input with tooltip
+<PasswordTooltip/>
+
+&NewLine;
+
+```tsx
+<PasswordInput
+  label={'New password'}
+  type={passVis? 'text' : 'password'}
+  toggle={() => {setPassVis(!passVis)}}
+  value={password}
+  valueChanged={setPassword}
+  rules={rules}
+  ruleChecked={'/path/to/file.svg'}
+  ruleUnchecked={'/path/to/file.svg'}
+  iconSrc={'/path/to/file.svg'}
+  name={'password-tooltip'}
+  tooltipIcon={'/path/to/file.svg'}
+  tooltipText={'This is a tooltip text. You can click anywhere on the screen to dismiss'}
+  tooltipClose={'optional close label'}
+/>
+```
+
+The [clickOutside](../hooks/click-outside) hook is used to hide the tooltip.
+
+:::note
+Tooltips are hidden if you don't provide an icon. Make sure to provide both if you would like to display tooltips.
+:::
+
+### Caps Lock warning
+toggle caps lock key to display a warning.
+
+<PasswordCaps/>
+
+&NewLine;
+
+```tsx
+<PasswordInput
+  label={'New password'}
+  type={'password'}
+  value={password}
+  valueChanged={setPassword}
+  rules={rules}
+  ruleChecked={'/path/to/file.svg'}
+  ruleUnchecked={'/path/to/file.svg'}
+  name={'password-caps'}
+  capsLockWarning={'Caps Lock enabled'}
+/>
+```
+
+## Playground
+```jsx live
+function Playground() {
+  const [value, setValue] = useState('1a');
+
+  const rules: PasswordRule[] = [
+    {label: '1 number', count: 1, type: PasswordRuleTypes.numbers},
+    {label: 'min length 6 characters', count: 6, type: PasswordRuleTypes.minLength},
+    {label: '1 special character', count: 1, type: PasswordRuleTypes.special},
+    {label: '1 uppercase', count: 1, type: PasswordRuleTypes.upper},
+  ];
+
+  return (
+    <PasswordInput
+      label={'New password'}
+      value={value}
+      valueChanged={setValue}
+      rules={rules}
+      //useBaseUrl is used to import static assets for docusaurus
+      ruleChecked={useBaseUrl('/img/example.svg#check')}
+      ruleUnchecked={useBaseUrl('/img/example.svg#uncheck')}
+      name={'playground-input'}
+      type={'password'}
+    />
+  );
+}
+```
