*removes modal & passwordRuleType enums

--- a/website/docs/components/passwordInput.mdx
+++ b/website/docs/components/passwordInput.mdx
@@ -38,7 +38,7 @@ Provided icons must be in svg format. Can be single svg (foo.svg) or sprites fil
   data={[
     {name: 'label', value: 'string', required: true, definition: 'Describe the rule to the user'},
     {name: 'count', value: 'number', required: false, definition: '# of characters required to comply to the rule'},
-    {name: 'type', value: 'PasswordRuleType enum', required: false, definition: 'Use a predefined pattern'},
+    {name: 'type', value: '"minLength" | "maxLength" | "letters" | "numbers" | "special" | "upper"', required: false, definition: 'Use a predefined pattern'},
     {name: 'pattern', value: 'regex string', required: false, definition: 'Use a custom pattern'},
   ]}
 />
@@ -59,7 +59,7 @@ const rules: PasswordRule[] = [
   {
     label: 'password must be at least 3 characters long',
     count: 3,
-    type: PasswordRuleTypes.minLength
+    type: 'minLength'
   },
   ...
 ];
@@ -169,10 +169,10 @@ function Playground() {
   const [value, setValue] = useState('1a');
 
   const rules: PasswordRule[] = [
-    {label: '1 number', count: 1, type: PasswordRuleTypes.numbers},
-    {label: 'min length 6 characters', count: 6, type: PasswordRuleTypes.minLength},
-    {label: '1 special character', count: 1, type: PasswordRuleTypes.special},
-    {label: '1 uppercase', count: 1, type: PasswordRuleTypes.upper},
+    {label: '1 number', count: 1, type: 'numbers'},
+    {label: 'min length 6 characters', count: 6, type: 'minLength'},
+    {label: '1 special character', count: 1, type: 'special'},
+    {label: '1 uppercase', count: 1, type: 'upper'},
   ];
 
   return (
