--- a/website/docs/components/modal.mdx
+++ b/website/docs/components/modal.mdx
@@ -118,7 +118,7 @@ function Playground() {
 
   return (
     <>
-      <CustomButton label={'show Modal'} onClick={() => setModalVis(true)} />
+      <PrimaryButton label={'show Modal'} color={'success'} onClick={() => setModalVis(true)} />
 
       {modalVis &&
         <NotifyModal
