--- a/website/docs/components/button.mdx
+++ b/website/docs/components/button.mdx
@@ -1,5 +1,5 @@
 ---
-title: <Button />
+title: Button
 description: Usage of the button component
 sidebar_position: 1
 tags: [components, button]
@@ -10,35 +10,34 @@ tags: [components, button]
 ## Assignable props
 <AssignableProps
   data={[
+    {name: 'buttonType', value: '"primary" | "secondary" | "outline" | "text"', required: true, definition: 'Button style'},
     {name: 'label', value: 'string', required: true, definition: 'Button label'},
+    {name: 'dark', value: 'boolean', required: false, definition: 'Enables dark mode', default: 'false'},
     {name: 'disabled', value: 'boolean', required: false, definition: 'Enable or disable the button', default: 'false'},
-    {name: 'small', value: 'boolean', required: false, definition: 'Decreases the size of the button', default: 'false'},
-    {name: 'theme', value: 'HEX code | "success" | "warning" | "error"', required: false, definition: 'Set the button theme', default: 'undefined'},
+    {name: 'size', value: '"small" | "medium" | "large"', required: false, definition: 'Set the size of the button', default: 'medium'},
+    {name: 'theme', value: 'HEX | "success" | "warning" | "error"', required: '', definition: 'Set the button theme'},
     {name: 'HTML button props', value: '', required: false, definition: 'HTML button attributes, e.g. "onClick"'},
   ]}
 />
 
-:::note[Providing a custom color for the theme prop]
-The provided HEX code must be 7 (including '#') characters long, e.g. '#1A2B3C'
+:::warning[When to use a theme]
+The theme prop must only be used for button types `primary` & `outline`.
 :::
 
-The font color (either black or white) will be chosen based on the provided theme. \
-Not providing a theme will generate the default styled button.
+
+If you want to use a custom color note that the provided `HEX` code must be a valid `HEX Color` with a maximum length of 6 characters (e.g. `#0F0` or `#00FF00`). \
+The font color (either black or white) will be chosen based on the provided theme.
 
 ## Example usage
-Buttons can be rendered with different styles.
+Buttons can be rendered with different styles and come with a light and dark version.
 
 ### Primary button
-
-#### light
 
 <div className={'showcase'}>
   <Button buttonType={'primary'} label={'Success'} theme={'success'}/>
   <Button buttonType={'primary'} label={'Warning'} theme={'warning'}/>
   <Button buttonType={'primary'} label={'Error'} theme={'error'}/>
-  <Button buttonType={'primary'} label={'small'} theme={'error'} small={true}/>
-  <Button buttonType={'primary'} label={'custom color'} theme={'#2ce8b8'}/>
-  <Button buttonType={'primary'} label={'custom color small'} theme={'#0047CC'} small={true}/>
+  <Button buttonType={'primary'} label={'custom color'} theme={'#b554e6'}/>
 </div>
 
 &NewLine;
@@ -50,22 +49,14 @@ Buttons can be rendered with different styles.
 
 <Button buttonType={'primary'} label={'Error'} theme={'error'}/>
 
-<Button buttonType={'primary'} label={'small'} theme={'error'} small={true}/>
-
-<Button buttonType={'primary'} label={'custom color'} theme={'#2ce8b8'}/>
-
-<Button buttonType={'primary'} label={'custom color small'} theme={'#0047CC'} small={true}/>
+<Button buttonType={'primary'} label={'custom color'} theme={'#b554e6'}/>
 ```
-
-#### dark
 
 <div className={'showcase'}>
   <Button buttonType={'primary'} label={'Success'} theme={'success'} dark={true}/>
   <Button buttonType={'primary'} label={'Warning'} theme={'warning'} dark={true}/>
   <Button buttonType={'primary'} label={'Error'} theme={'error'} dark={true}/>
-  <Button buttonType={'primary'} label={'small'} theme={'error'} small={true} dark={true}/>
-  <Button buttonType={'primary'} label={'custom color'} theme={'#2ce8b8'} dark={true}/>
-  <Button buttonType={'primary'} label={'custom color small'} theme={'#0047CC'} small={true} dark={true}/>
+  <Button buttonType={'primary'} label={'custom color'} theme={'#b554e6'} dark={true}/>
 </div>
 
 &NewLine;
@@ -77,38 +68,38 @@ Buttons can be rendered with different styles.
 
 <Button buttonType={'primary'} label={'Error'} theme={'error'} dark={true}/>
 
-<Button buttonType={'primary'} label={'small'} theme={'error'} small={true} dark={true}/>
-
-<Button buttonType={'primary'} label={'custom color'} theme={'#2ce8b8'} dark={true}/>
-
-<Button buttonType={'primary'} label={'custom color small'} theme={'#0047CC'} small={true} dark={true}/>
+<Button buttonType={'primary'} label={'custom color'} theme={'#b554e6'} dark={true}/>
 ```
 
 ### Secondary button
+
 <div className={'showcase'}>
   <Button buttonType={'secondary'} label={'secondary button'}/>
-  <Button buttonType={'secondary'} label={'small button'} small={true}/>
 </div>
 
 &NewLine;
 
 ```tsx
 <Button buttonType={'secondary'} label={'secondary button'}/>
+```
 
-<Button buttonType={'secondary'} label={'small button'} small={true}/>
+<div className={'showcase'}>
+  <Button buttonType={'secondary'} label={'secondary button'} dark={true}/>
+</div>
+
+&NewLine;
+
+```tsx
+<Button buttonType={'secondary'} label={'secondary button'} dark={true}/>
 ```
 
 ### Outline button
-
-#### light
 
 <div className={'showcase'}>
   <Button buttonType={'outline'} label={'Success'} theme={'success'}/>
   <Button buttonType={'outline'} label={'Warning'} theme={'warning'}/>
   <Button buttonType={'outline'} label={'Error'} theme={'error'}/>
-  <Button buttonType={'outline'} label={'small'} theme={'error'} small={true}/>
-  <Button buttonType={'outline'} label={'custom color'} theme={'#2ce8b8'}/>
-  <Button buttonType={'outline'} label={'custom color small'} theme={'#0047CC'} small={true}/>
+  <Button buttonType={'outline'} label={'custom color'} theme={'#b554e6'}/>
 </div>
 
 &NewLine;
@@ -120,22 +111,14 @@ Buttons can be rendered with different styles.
 
 <Button buttonType={'outline'} label={'Error'} theme={'error'}/>
 
-<Button buttonType={'outline'} label={'small'} theme={'error'} small={true}/>
-
-<Button buttonType={'outline'} label={'custom color'} theme={'#2ce8b8'}/>
-
-<Button buttonType={'outline'} label={'custom color small'} theme={'#0047CC'} small={true}/>
+<Button buttonType={'outline'} label={'custom color'} theme={'#b554e6'}/>
 ```
-
-#### dark
 
 <div className={'showcase'}>
   <Button buttonType={'outline'} label={'Success'} theme={'success'} dark={true}/>
   <Button buttonType={'outline'} label={'Warning'} theme={'warning'} dark={true}/>
   <Button buttonType={'outline'} label={'Error'} theme={'error'} dark={true}/>
-  <Button buttonType={'outline'} label={'small'} theme={'error'} small={true} dark={true}/>
-  <Button buttonType={'outline'} label={'custom color'} theme={'#2ce8b8'} dark={true}/>
-  <Button buttonType={'outline'} label={'custom color small'} theme={'#0047CC'} small={true} dark={true}/>
+  <Button buttonType={'outline'} label={'custom color'} theme={'#b554e6'} dark={true}/>
 </div>
 
 &NewLine;
@@ -147,29 +130,31 @@ Buttons can be rendered with different styles.
 
 <Button buttonType={'outline'} label={'Error'} theme={'error'} dark={true}/>
 
-<Button buttonType={'outline'} label={'small'} theme={'error'} small={true} dark={true}/>
-
-<Button buttonType={'outline'} label={'custom color'} theme={'#2ce8b8'} dark={true}/>
-
-<Button buttonType={'outline'} label={'custom color small'} theme={'#0047CC'} small={true} dark={true}/>
+<Button buttonType={'outline'} label={'custom color'} theme={'#b554e6'} dark={true}/>
 ```
 
 ### Text button
 WIP
 
 ### Disabled button
-WIP
 <div className={'showcase bottom-m'}>
   <Button label={'disabled'} theme={'error'} disabled={true}/>
-  <Button label={'small'} theme={'#0047CC'} disabled={true} small={true}/>
 </div>
 
 &NewLine;
 
 ```tsx
 <Button label={'disabled'} theme={'error'} disabled={true}/>
+```
 
-<Button label={'small'} theme={'#0047CC'} disabled={true} small={true}/>
+<div className={'showcase bottom-m'}>
+  <Button label={'disabled'} theme={'error'} disabled={true} dark={true}/>
+</div>
+
+&NewLine;
+
+```tsx
+<Button label={'disabled'} theme={'error'} disabled={true} dark={true}/>
 ```
 
 :::info[Disabling a button]
@@ -181,10 +166,11 @@ The provided theme will be ignored if the button is disabled
 function Playground() {
   return (
     <Button
+      buttonType={'primary'}
       label={'Click me!'}
       theme={'#0047CC'}
       type={'button'}
-      onClick={() => alert('Themed button click')}
+      onClick={() => alert('Button clicked')}
     />
   );
 }
